syntax = "proto3";

package protos;

option go_package = "github.com/alif-github/go-grpc/pb/pagination";

message Pagination {
  uint64 total = 1;
  uint32 per_page = 2;
  uint32 current_page = 3;
  uint32 last_page = 4;
}